# fggrid

./: CMakeLists.txt  README.md  main.cpp  run_fggrid.cpp  visualizer.cpp
include/: FgCell.h  FgGeometry.h  FgTree.h  FgVertex.h  FgVisualizer.h  misc.h
src/: FgCell.cpp  FgGeometry.cpp  FgTree.cpp  FgVertex.cpp  FgVisualizer.cpp  misc.cpp  misc.cxx
test/: CMakeLists.txt  FgGeometry_test.cpp  FgTree_test.cpp  FgVisualizer_test.cpp  VisualizeSphereTree_test.cpp
